welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:30: error: ')' expected but ';' found.
  setPos( getMondeHauteur()-1; getMondeHauteur()-1 ) ; ecritMessage(48)
                             ^Diagonal:30: error: ';' expected but ')' found.
  setPos( getMondeHauteur()-1; getMondeHauteur()-1 ) ; ecritMessage(48)
                                                   ^